--- a/documentation/asciidoc/topics/proc_creating_sa_tokens.adoc
+++ b/documentation/asciidoc/topics/proc_creating_sa_tokens.adoc
@@ -4,7 +4,7 @@ Generate service account tokens on each {openshiftshort} cluster that acts as a
 backup location. Clusters use these tokens to authenticate with each other so
 {ispn_operator} in each cluster can lookup the connection details
 for the cross-site replication service in other backup clusters.
-This is not required you're going to configure the backup location host/port details yourself.
+This is not required when you're going to directly configure the backup location host/port details.
 
 .Procedure
 
