--- a/documentation/asciidoc/topics/proc_install_operatorhub.adoc
+++ b/documentation/asciidoc/topics/proc_install_operatorhub.adoc
@@ -1,12 +1,13 @@
 [id='operatorhub']
-= Installing {ispn_operator} on {k8s}
-Install {ispn_operator} on {k8s} from https://operatorhub.io/operator/infinispan[OperatorHub.io].
+= Installing {ispn_operator} from OperatorHub.io
+Use the command line to install {ispn_operator} from https://operatorhub.io/operator/infinispan[OperatorHub.io].
 
 .Prerequisites
 
 * {okd} 3.11 or later.
 * {k8s} 1.11 or later.
-* Administrator access to the {k8s} cluster.
+* Have administrator access on the {k8s} cluster.
+* Have a `kubectl` or `oc` client.
 
 .Procedure
 
