--- a/documentation/asciidoc/topics/attributes/oc_cmds.adoc
+++ b/documentation/asciidoc/topics/attributes/oc_cmds.adoc
@@ -6,6 +6,9 @@
 :oc_get_service: oc get services
 :oc_get_routes: oc get routes
 
+:oc_new_project: oc new-project
+:oc_project: oc project
+
 :oc_apply_cr: oc apply -f
 :oc_apply_cr_custom: oc apply -f my_crd.yaml
 
