--- a/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
+++ b/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
@@ -24,7 +24,7 @@ $ {oc_apply_cr} tls_secret.yaml
 +
 [source,options="nowrap",subs=attributes+]
 ----
-include::yaml_annotated/cr_tls_secret.yaml[]
+include::yaml/cr_tls_secret.yaml[]
 ----
 +
 <1> Encrypts traffic to and from {brandname} endpoints.
