--- a/documentation/asciidoc/topics/ref_secret_auth.adoc
+++ b/documentation/asciidoc/topics/ref_secret_auth.adoc
@@ -3,7 +3,7 @@
 
 [source,options="nowrap",subs=attributes+]
 ----
-include::yaml_annotated/secret_connect.yaml[]
+include::yaml/secret_connect.yaml[]
 ----
 
 <1> Names the authentication secret.
