--- a/documentation/asciidoc/topics/ref_secret_tls_certificate.adoc
+++ b/documentation/asciidoc/topics/ref_secret_tls_certificate.adoc
@@ -3,7 +3,7 @@
 
 [source,options="nowrap",subs=attributes+]
 ----
-include::yaml_annotated/secret_tls_cert.yaml[]
+include::yaml/secret_tls_cert.yaml[]
 ----
 
 <1> Adds a base64 encoded TLS key.
