--- a/documentation/asciidoc/topics/con_xsite_replication.adoc
+++ b/documentation/asciidoc/topics/con_xsite_replication.adoc
@@ -1,11 +1,7 @@
-[id='global_clusters']
+[id='automatic_site_connections-{context}']
 = Cross-Site Replication with {ispn_operator}
-If you have {brandname} clusters running in separate locations, use
-{ispn_operator} to connect them so you can back up data across sites.
-
-For example, in the following illustration, {ispn_operator} manages a
-{brandname} cluster at a data center in New York City, **NYC**. At another data
-center in London, **LON**, {ispn_operator} also manages a {brandname} cluster.
+The following illustration provides an example in which {ispn_operator} manages a {brandname} cluster at a data center in New York City, **NYC**.
+At another data center in London, **LON**, {ispn_operator} also manages a {brandname} cluster.
 
 ifndef::productized[]
 image::xsite-ispn.svg[]
@@ -15,15 +11,16 @@ ifdef::productized[]
 image::xsite-rhdg.svg[]
 endif::productized[]
 
-{ispn_operator} uses a Kubernetes API to establish a secure connection between
-the {ocp} clusters in **NYC** and **LON**. {ispn_operator} then creates a
-cross-site replication service so {brandname} clusters can back up data across
-locations.
+{ispn_operator} uses the Kubernetes API to establish a secure connection between the {ocp} clusters in **NYC** and **LON**.
+{ispn_operator} then creates a cross-site replication service so {brandname} clusters can back up data across locations.
 
-Each {brandname} cluster has one site master node that coordinates all backup
-requests. {ispn_operator} identifies the site master node so that all traffic
-through the cross-site replication service goes to the site master.
+[NOTE]
+====
+When you configure automatic connections, {brandname} clusters do not start running until {ispn_operator} can establish connections with all backup locations in the configuration.
+====
 
-If the current site master node goes offline then a new node becomes site
-master. {ispn_operator} automatically finds the new site master node and
-updates the cross-site replication service to forward backup requests to it.
+Each {brandname} cluster has one site master node that coordinates all backup requests.
+{ispn_operator} identifies the site master node so that all traffic through the cross-site replication service goes to the site master.
+
+If the current site master node goes offline then a new node becomes site master.
+{ispn_operator} automatically finds the new site master node and updates the cross-site replication service to forward backup requests to it.
