--- a/documentation/asciidoc/topics/proc_adding_backup_locations.adoc
+++ b/documentation/asciidoc/topics/proc_adding_backup_locations.adoc
@@ -5,10 +5,10 @@ can add backup locations to your cache configurations.
 
 .Procedure
 
-. Create cache configurations with identical names for each site.
+. Create cache configurations that name remote sites as backup locations.
 +
-Cache configurations at each site can use different cache modes and backup
-strategies. {brandname} replicates data based on cache names.
+{brandname} replicates data based on cache names.
+For this reason, site names in your cache configurations must match site names, `spec.service.sites.local.name`, in your **Infinispan** CRs.
 +
 . Configure backup locations to go offline automatically with the `take-offline` element.
 .. Set the amount of time, in milliseconds, before backup locations go offline with the `min-wait` attribute.
@@ -58,5 +58,5 @@ The following configuration examples show backup locations for caches:
 
 .Reference
 
-* link:#configuring_sites-xsite[Configuring Clusters for Cross-Site Replication]
+* link:#backup_sites[Setting Up Cross-Site Replication]
 * link:{xsite_docs}[{brandname} Guide to Cross-Site Replication]
