--- a/documentation/asciidoc/topics/ref_xsite_crd_automatic.adoc
+++ b/documentation/asciidoc/topics/ref_xsite_crd_automatic.adoc
@@ -1,9 +1,9 @@
-[id='ref_xsite_crd-{context}']
-= Cross-Site Replication Resources
+[id='ref_xsite_crd_automatic-{context}']
+= Resources for Automatic Cross-Site Connections
 
 [source,options="nowrap",subs=attributes+]
 ----
-include::yaml_annotated/cr_backup_site.yaml[]
+include::yaml/cr_backup_site_automatic.yaml[]
 ----
 
 //Community
@@ -39,7 +39,7 @@ ifdef::productized[]
 <4> Provides connection information for all backup locations.
 <5> Specifies a backup location that matches `.spec.service.sites.local.name`.
 <6> Specifies the URL of the {openshiftshort} API for the backup location.
-<7> Specifies the secret that contains the service account token for the backup site.
+<7> Specifies the secret that contains the service account token for the backup location.
 <8> Logs error messages for the JGroups TCP protocol.
 <9> Logs fatal messages for the JGroups RELAY2 protocol.
 endif::productized[]
