ISPN-12455 backup restore docs

--- a/documentation/asciidoc/topics/attributes/product-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/product-attributes.adoc
@@ -10,6 +10,7 @@
 :example_namespace: rhdg-namespace
 :pv_path: /opt/datagrid/server/data
 :conf_path: /opt/datagrid/server/conf
+:backup_path: /opt/datagrid/backups
 
 //
 // Operator
