--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -11,6 +11,7 @@
 :example_namespace: ispn-namespace
 :pv_path: /opt/infinispan/server/data
 :conf_path: /opt/infinispan/server/conf
+:backup_path: /opt/infinispan/backups
 
 //
 // Operator
