--- a/documentation/asciidoc/topics/attributes/kubectl_cmds.adoc
+++ b/documentation/asciidoc/topics/attributes/kubectl_cmds.adoc
@@ -18,3 +18,5 @@
 :oc_create: kubectl create
 
 :kubectl_exec: kubectl exec -it {example_crd_name}-0 -- /bin/bash
+
+:describe_backup: kubectl describe Backup my-backup -n namespace
