--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -10,5 +10,6 @@ include::{stories}/assembly_setting_up_xsite.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_caches.adoc[leveloffset=+1]
 include::{stories}/assembly_setting_up_prometheus.adoc[leveloffset=+1]
 include::{stories}/assembly_backing_up_restoring.adoc[leveloffset=+1]
+include::{stories}/assembly_anti_affinity.adoc[leveloffset=+1]
 include::{stories}/assembly_monitoring_logs.adoc[leveloffset=+1]
 include::{stories}/assembly_reference.adoc[leveloffset=+1]
