--- a/documentation/asciidoc/topics/ref_datagridservice_resources.adoc
+++ b/documentation/asciidoc/topics/ref_datagridservice_resources.adoc
@@ -44,6 +44,7 @@ spec:
       org.jgroups.protocols.relay.RELAY2: fatal
   expose: <10>
     type: LoadBalancer
+  affinity <11>
 ----
 
 <1> Names the {brandname} cluster.
@@ -56,3 +57,4 @@ spec:
 <8> Allocates resources to nodes.
 <9> Configures logging.
 <10> Configures services for external traffic.
+<11> Configures affinity and anti-affinity strategies.
