ISPN-12532 configuring node anti-affinity

--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -9,5 +9,6 @@ include::{stories}/assembly_encrypting_endpoints.adoc[leveloffset=+1]
 include::{stories}/assembly_xsite_replication.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_caches.adoc[leveloffset=+1]
 include::{stories}/assembly_setting_up_prometheus.adoc[leveloffset=+1]
+include::{stories}/assembly_anti_affinity.adoc[leveloffset=+1]
 include::{stories}/assembly_monitoring_logs.adoc[leveloffset=+1]
 include::{stories}/assembly_reference.adoc[leveloffset=+1]
