--- a/documentation/asciidoc/topics/proc_adding_custom_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_adding_custom_credentials.adoc
@@ -13,7 +13,7 @@ $ {oc_create} secret generic --from-file=identities.yaml connect-secret
 ----
 +
 . Specify the authentication secret with `spec.security.endpointSecretName` in
-your **Infinispan** CR and then apply the changes.
+your `Infinispan` CR and then apply the changes.
 +
 [source,options="nowrap",subs=attributes+]
 ----
