--- a/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
@@ -19,11 +19,11 @@ named `xsite-cluster`.
 
 .Procedure
 
-. Create an **Infinispan** CR for each {brandname} cluster.
+. Create an `Infinispan` CR for each {brandname} cluster.
 . Specify the name of the local site with `spec.service.sites.local.name`.
 . Provide the name, URL, and secret for each {brandname} cluster that acts as a backup location with `spec.service.sites.locations`.
 +
-The following are example **Infinispan** CR definitions for **LON** and **NYC**:
+The following are example `Infinispan` CR definitions for **LON** and **NYC**:
 +
 * **LON**
 +
@@ -87,7 +87,7 @@ include::yaml/xsite_logging.yaml[]
 The preceding configuration decreases logging for JGroups TCP and RELAY2 protocols to reduce excessive messages about cluster backup operations, which can result in a large number of log files that use container storage.
 +
 . Configure nodes with any other {datagridservice} resources.
-. Apply the **Infinispan** CRs.
+. Apply the `Infinispan` CRs.
 . Check node logs to verify that {brandname} clusters form a cross-site view, for example:
 +
 [source,options="nowrap",subs=attributes+]
