--- a/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
+++ b/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
@@ -20,7 +20,7 @@ $ {oc_apply_cr} tls_secret.yaml
 ----
 +
 . Specify the encryption secret with `spec.security.endpointEncryption` in your
-**Infinispan** CR and then apply the changes.
+`Infinispan` CR and then apply the changes.
 +
 [source,options="nowrap",subs=attributes+]
 ----
