--- a/documentation/asciidoc/topics/proc_install_command_line.adoc
+++ b/documentation/asciidoc/topics/proc_install_command_line.adoc
@@ -75,7 +75,7 @@ NAME                                   READY   STATUS
 infinispan-operator-<id>               1/1     Running
 ----
 +
-.. Change to the project where your {brandname} cluster runs so you can start applying changes with your **Infinispan** CR.
+.. Change to the project where your {brandname} cluster runs so you can start applying changes with your `Infinispan` CR.
 +
 [source,options="nowrap",subs=attributes+]
 ----
