--- a/documentation/asciidoc/titles/operator.asciidoc
+++ b/documentation/asciidoc/titles/operator.asciidoc
@@ -3,6 +3,7 @@
 :icons: font
 :toclevels: 3
 :numbered:
+:docinfo: private-head,private-footer
 
 //Avoid symlinks in community docs
 :topics: ../topics
