--- a/documentation/asciidoc/titles/operator.asciidoc
+++ b/documentation/asciidoc/titles/operator.asciidoc
@@ -13,6 +13,8 @@
 include::{topics}/attributes/community-attributes.adoc[]
 
 [id='infinispan_operator']
-= Running {brandname} on {k8s} with {ispn_operator}
+= Running {brandname} on {k8s} with {ispn_operator} {ispn_operator_version}
+
+{ispn_operator} {ispn_operator_version} works with {brandname} Server {ispn_version}
 
 include::stories.adoc[]
