--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -47,6 +47,8 @@ include::links.adoc[]
 // Operator
 //
 :ispn_operator: Infinispan Operator
+:ispn_operator_version: 1.1
+:ispn_version: 10.0
 :k8s: Kubernetes
 :okd: OKD
 
