--- a/documentation/asciidoc/stories/assembly_encrypting_endpoints.adoc
+++ b/documentation/asciidoc/stories/assembly_encrypting_endpoints.adoc
@@ -6,6 +6,7 @@ service certificates or custom TLS certificates.
 
 include::{topics}/ref_encryption_service_ca.adoc[leveloffset=+1]
 include::{topics}/proc_retrieving_tls_certificates.adoc[leveloffset=+2]
+include::{topics}/proc_disabling_encryption.adoc[leveloffset=+1]
 include::{topics}/proc_encrypting_endpoints_tls_secret.adoc[leveloffset=+1]
 include::{topics}/ref_secret_tls_certificate.adoc[leveloffset=+2]
 include::{topics}/ref_secret_tls_keystore.adoc[leveloffset=+2]
