--- a/documentation/asciidoc/topics/ref_xsite_crd_automatic.adoc
+++ b/documentation/asciidoc/topics/ref_xsite_crd_automatic.adoc
@@ -17,7 +17,7 @@ ifndef::productized[]
 <5> Specifies a backup location that matches `.spec.service.sites.local.name`.
 <6> Specifies a backup location.
 //* Use `xsite://` if the backup location has a static hostname and port.
-* Use `minikube://` if the backup location is a Minikube instance.
+* Use `kubernetes://` if the backup location is a Kubernetes instance.
 * Use `openshift://` if the backup location is an {openshiftshort} cluster. You should specify the URL of the Kubernetes API.
 <7> Specifies the access secret for a site.
 +
