--- a/documentation/asciidoc/topics/ref_xsite_crd_manual.adoc
+++ b/documentation/asciidoc/topics/ref_xsite_crd_manual.adoc
@@ -20,7 +20,6 @@ ifdef::productized[]
 endif::productized[]
 <4> Provides connection information for all backup locations.
 <5> Specifies a backup location that matches `.spec.service.sites.local.name`.
-<6> Specifies the hostname for the backup location.
-<7> Optionally specifies the port that the backup location uses for the JGroups RELAY2 protocol. The default is `7900`.
-<8> Logs error messages for the JGroups TCP protocol.
-<9> Logs fatal messages for the JGroups RELAY2 protocol.
+<6> Specifies the hostname and port URL for the backup location. The default port value is `7900`.
+<7> Logs error messages for the JGroups TCP protocol.
+<8> Logs fatal messages for the JGroups RELAY2 protocol.
