--- a/documentation/asciidoc/topics/ref_xsite_crd_automatic.adoc
+++ b/documentation/asciidoc/topics/ref_xsite_crd_automatic.adoc
@@ -18,7 +18,7 @@ ifndef::productized[]
 <6> Specifies a backup location.
 * Use `kubernetes://` if the backup location is a Kubernetes instance.
 * Use `openshift://` if the backup location is an {openshiftshort} cluster. You should specify the URL of the Kubernetes API.
-* Use `xsite://` if the backup location has a static hostname and port.
+* Use `infinispan+xsite://` if the backup location has a static hostname and port.
 <7> Specifies the access secret for a site.
 +
 [NOTE]
