Update Backup/Restore resource names
The cache-configs and script names were renamed after Dev06, therefore
the CRDs should be updated to reflect this.

Transformation logic has been added for the Backup/Restore CR specs to
ensure backwards-compatibility upstream, however this should be removed before the next downstream release.

Lock.Owners is no longer set explicitly as underlying issue fixed in
Infinispan.

--- a/documentation/asciidoc/topics/proc_backing_up_cluster.adoc
+++ b/documentation/asciidoc/topics/proc_backing_up_cluster.adoc
@@ -41,7 +41,7 @@ include::yaml/cr_backup_resources.yaml[]
 <2> Caches by name.
 <3> Counters by name.
 <4> Protobuf schemas for querying.
-<5> Custom server scripts.
+<5> Custom server tasks.
 +
 . Apply your **Backup** CR.
 +
